RESOLVED FIXED273432
[Site Isolation] Text input does not work
https://bugs.webkit.org/show_bug.cgi?id=273432
Summary [Site Isolation] Text input does not work
Charlie Wolfe
Reported 2024-04-29 13:57:51 PDT
`shouldSuppressTextInputFromEditing` suppresses text input while the main frame is in a provisional load state. With site isolation, iframe processes do not know the load state of the main frame. This feature will need to be rethought to make it work with site isolation. For now, disable it in isolated iframes to get text input to work.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-29 13:58:04 PDT
Charlie Wolfe
Comment 2 2024-04-29 13:59:19 PDT
EWS
Comment 3 2024-04-29 21:11:19 PDT
Committed 278151@main (01fe68213aaa): <https://commits.webkit.org/278151@main> Reviewed commits have been landed. Closing PR #27894 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.