[Site Isolation] Text input does not work https://bugs.webkit.org/show_bug.cgi?id=273432 rdar://127252787

Reviewed by Pascoe.

`shouldSuppressTextInputFromEditing` suppresses text input while the main frame is in a provisional load
state. With site isolation, iframe processes do not know the load state of the main frame. This feature
will need to be rethought to make it work with site isolation. For now, disable it in isolated iframes to
get text input to work.

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebCore/editing/Editor.cpp:
(WebCore::Editor::shouldInsertText const):

Canonical link: https://commits.webkit.org/278151@main